<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_main_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@id/btn_main_num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_main_num_2" />

    <Button
        android:id="@id/btn_main_num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_5"
        app:layout_constraintLeft_toRightOf="@id/btn_main_num_1"
        app:layout_constraintRight_toLeftOf="@+id/btn_main_num_3" />

    <Button
        android:id="@id/btn_main_num_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_3"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_6"
        app:layout_constraintLeft_toRightOf="@id/btn_main_num_2"
        app:layout_constraintRight_toLeftOf="@+id/btn_main_plus" />

    <Button
        android:id="@id/btn_main_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onPlusClicked"
        android:text="@string/btn_content_main_plus"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_minus"
        app:layout_constraintLeft_toRightOf="@id/btn_main_num_3"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@id/btn_main_num_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_7"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_1"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_1" />

    <Button
        android:id="@id/btn_main_num_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_5"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_8"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_2"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_2" />

    <Button
        android:id="@id/btn_main_num_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_6"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_num_9"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_3"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_3" />

    <Button
        android:id="@id/btn_main_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onMinusClicked"
        android:text="@string/btn_content_main_minus"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_equals"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_plus"
        app:layout_constraintRight_toRightOf="@id/btn_main_plus" />

    <Button
        android:id="@id/btn_main_num_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_change_theme"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_1"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_1" />

    <Button
        android:id="@id/btn_main_num_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_8"
        app:layout_constraintBottom_toTopOf="@id/btn_main_change_theme"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_2"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_2" />

    <Button
        android:id="@id/btn_main_num_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumClicked"
        android:text="@string/btn_content_main_num_9"
        app:layout_constraintBottom_toTopOf="@id/btn_main_change_theme"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_num_3"
        app:layout_constraintRight_toRightOf="@id/btn_main_num_3" />

    <Button
        android:id="@id/btn_main_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onEqualsClicked"
        android:text="@string/btn_content_main_equals"
        app:layout_constraintBottom_toTopOf="@id/btn_main_change_theme"
        app:layout_constraintLeft_toLeftOf="@id/btn_main_plus"
        app:layout_constraintRight_toRightOf="@id/btn_main_plus" />

    <Button
        android:id="@id/btn_main_change_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onChangeThemeClicked"
        android:text="@string/btn_content_main_change_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>